# ProjectTracking

./: .gitignore  Cargo.toml  add_to_start_menu.ps1  build.rs  project_tracker.sqlite
src/: db.rs  main.rs
