[package]
name = "project_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"

[dev-dependencies]
tempfile = "3"
