[package]
name = "project_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", features = ["png"] }
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winresource = "0.1"
image = { version = "0.25", features = ["ico"] }
